--- a/LookupText/App.config
+++ b/LookupText/App.config
@@ -6,6 +6,6 @@
   <connectionStrings>
     <add name="SendText"
     connectionString="Initial Catalog=SendText;Data Source=FRANKLIN;Integrated Security=SSPI;MultipleActiveResultSets=True;"
-    providerName="Npgsql" />
+    providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
